--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,20 @@
+body {
+  margin: 0;
+}
+
+button:focus {
+  outline: none;
+}
+
 .color-container {
+  align-items: center;
   border: solid 4px #000;
+  display: flex;
+  height: 100px;
+  justify-content: flex-end;
+  margin: 25px;
+  padding-right: 20px;
+  width: 50%;
 }
 
 .lock-btn {
