--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 button:focus {
   outline: none;
 }
@@ -18,6 +22,7 @@ button:focus {
 }
 
 .lock-btn {
+  background-color: rgba(123, 123, 123, 0);
   background-image: url("./../Images/002-padlock-unlock.svg");
   background-position: center;
   background-size: cover;
