--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,10 +11,7 @@ button:focus {
 }
 
 form {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  margin: 20px;
 }
 
 .color-container {
@@ -25,6 +22,18 @@ form {
   justify-content: flex-end;
   margin: 25px;
   padding-right: 20px;
+}
+
+.form-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  justify-content: center;
+  padding: 25px;
 }
 
 .lock-btn {
@@ -59,4 +68,5 @@ form {
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  padding: 25px;
 }
