--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,7 +69,12 @@ form {
 .main-page-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 40%, 60%;
+}
+
+.palette-tab {
+  display: flex;
+  justify-content: space-around;
 }
 
 .project-id {
@@ -80,10 +85,23 @@ form {
   text-transform: capitalize;
 }
 
+.saved-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px;
+  width: 40%;
+}
+
 .saved-palettes {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
   padding: 25px;
+}
+
+.thumbnail {
+  border: solid 1px #000;
+  height: 30px;
+  width: 30px;
 }
