Let user change the project they are on via click

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,6 +96,10 @@ form {
   text-transform: capitalize;
 }
 
+.proj-title {
+  cursor: pointer;
+}
+
 .saved-container {
   align-items: center;
   display: flex;
