--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,7 +79,7 @@ form {
 .main-page-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 40%, 60%;
+  grid-template-rows: 10vh, 90vh;
 }
 
 .palette-tab {
@@ -113,6 +113,7 @@ form {
   grid-column-end: 3;
   grid-row-start: 2;
   grid-row-end: 3;
+  overflow-y: scroll;
   padding: 25px;
 }
 
