--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto', sans-serif;
   margin: 0;
 }
 
@@ -28,6 +29,10 @@ form {
   padding-right: 20px;
 }
 
+.current-project {
+  margin-top: 0;
+}
+
 .delete-btn {
   background-image: url("./../Images/delete.svg");
   background-position: center;
@@ -52,7 +57,17 @@ form {
 
 .generate-btn,
 .save-palette-btn {
+  background-color: #006700;
+  color: #fff;
+  font-weight: 700;
+  height: 30px;
   width: 70%;
+}
+
+.generate-btn:active,
+.save-palette-btn:active {
+  background-color: #00ff00;
+  color: #000;
 }
 
 .lock-btn {
